add cursor: not-allowed css to disabled checkboxes

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,10 @@ input[type="radio"] {
 	display: inline-block;
 }
 
+input:disabled {
+	cursor: not-allowed;
+}
+
 button {
 	color: #fff;
 	padding: .55em 1.25em;
